assets/css/app.css
/* ... */
.about .about-content .timeline .timeline-text
{
    line-height: 25px;
    font-size: 16px;
    text-align: justify;
    color: var(--text-black-700);
}

/* ===== Services ===== */
.service .service-item
{
    margin-bottom: 30px;
    flex: 0 0 33.33%;
    max-width: 33.33%;
    margin-left: 10%;    
}

.service .service-item .service-item-inner
{
    background-color: var(--bg-black-100);
    border: 1px solid var(--bg-black-50);
    border-radius: 10px;
    padding: 30px 15px;
    text-align: center;
    transition: all 0.3s ease;
}

.service .service-item .service-item-inner:hover
{
    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
}

.service .service-item .service-item-inner .img
{
    height: 60px;
    width: 60px;
    border-radius: 50%;
    display: block;
    margin: 0 auto 30px;
    text-align: center;
}



.service-img
{
    text-align: center;
}

/*===== Portfolio =====*/
.portfolio .container
{
    padding: 40px;
}

.portfolio .portfolio-heading
{
    flex: 0 0 100%;
    max-width: 100%;
    margin-bottom: 40px;
}

.portfolio .portfolio-heading h2
{
    color: var(--text-black-900);
    font-weight: 500;
}

.portfolio .portfolio-item
{
    flex: 0 0 33.33%;
    max-width: 33.33%;
    margin-bottom: 30px;
}

.portfolio .portfolio-item-inner
{
    border: 6px solid var(--bg-black-100);
    border-radius: 10px;
    overflow: hidden;
    cursor: pointer;
}

.portfolio .portfolio-item-inner .portfolio-img img
{
    width: 100%;
    display: block;
}

/* ===== Contact =====*/
.contact-title
{
    color: var(--skin-color);
    text-align: center;
    font-size: 25px;
    margin-bottom: 20px;
}

.contact-sub-title
{
    color: var(--text-black-900);
    text-align: center;
    font-size: 15px;
    margin: 60px;
}

.contact .contact-info-item
{
    flex: 0 0 25%;
    max-width: 25%;
    text-align: center;
    margin-bottom: 60px;
}

.contact .contact-info-item .icon
{
    display: inline-block;
    max-width: 25%;
    text-align: center;
}

.contact .contact-info-item .icon .fa
{
    font-size: 25px;
    color: var(--skin-color);
}

.contact .contact-info-item h4
{
    font-size: 18px;
    font-weight: 700;
    color: var(--text-black-900);
    text-transform: capitalize;
    margin: 15px 0 5px;
}

.contact .contact-info-item p
{
    font-size: 16px;
    line-height: 25px;
    color: var(--text-black-700);
    font-weight: 400;
}

.contact .contact-form
{
    flex: 0 0 100%;
    max-width: 100%;
}

.contact .contact-form .col-6
{
    flex: 0 0 50%;
    max-width: 100%;
}

.contact .contact-form .col-12
{
    flex: 0 0 100%;
    max-width: 100%;
}

.contact .contact-form .form-item
{
    margin-bottom: 30px;
}

.contact .contact-form  .form-item .form-control
{
    width: 100%;
    height: 50px;
    border-radius: 15px;
    background: var(--bg-black-100);
    border: 1px solid var(--bg-black-50);
    padding: 10px 25px;
    font-size: 16px;
    color: var(--text-black-700);
    transition: all 0.3s ease;
}

.contact .contact-form .form-item .form-control:focus
{
    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
}

.contact .contact-form .form-item textarea.form-control
{
    height: 140px;
}

.contact .contact-form .btn
{
    height: 50px;
    padding: 0 50px;
}

@media (max-width: 1199px)
{
    .aside
    {
        left: -290px;
    }

    .main-content
    {
        padding-left: 0;
    }

    .about .about-content .personal-info .info-item p span
    {
       display: block;
       margin-left: 0; 
    }
}

@media (max-width: 991px)
{   
    .contact .contact-info-item,
    .portfolio .portfolio-item,
    .service .service-item
    {
        flex: 0 0 50%;
       max-width: 50%;
    }

    .home .home-info
    {
       flex: 0 0 100%;
       max-width: 100%; 
    }

    .home .home-img
    {
        display: none;
    }
}

@media (max-width: 767px)
{
    .contact .contact-form .col-6,
    .contact .contact-info-item,
    .portfolio .portfolio-item,
    .service .service-item,
    .about .about-content .experience,
    .about .about-content .education,
    .about .about-content .skills,
    .about .about-content .personal-info
    {
        flex: 0 0 100%;
        max-width: 100%;
    }
}

